--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
             <div class="slider-container">
                 <div class="slider-group">
                     <label>Text Horizontal Position</label>
-                    <input type="range" id="textX" min="0" max="1000" value="250" oninput="updatePreview()">
+                    <input type="range" id="textX" min="0" max="500" value="250" oninput="updatePreview()">
                 </div>
                 <div class="slider-group">
                     <label>Text Vertical Position</label>
-                    <input type="range" id="textY" min="0" max="1000" value="150" oninput="updatePreview()">
+                    <input type="range" id="textY" min="0" max="500" value="250" oninput="updatePreview()">
                 </div>
             </div>
             <button onclick="generateCard()">Generate & Download</button>
@@ -120,43 +120,62 @@
 
     <script>
         let selectedDesign = "";
+        let canvas = document.getElementById("previewCanvas");
+        let ctx = canvas.getContext("2d");
+        let image = new Image();
 
         function selectDesign(img) {
             document.querySelectorAll('.design-selection img').forEach(el => el.classList.remove('selected'));
             img.classList.add('selected');
             selectedDesign = img.src;
-            updatePreview();
+            image.src = selectedDesign;
+            image.onload = () => updatePreview();
         }
 
         function updatePreview() {
             if (!selectedDesign) return;
 
-            let canvas = document.getElementById("previewCanvas");
-            let ctx = canvas.getContext("2d");
-            let image = new Image();
-            image.src = selectedDesign;
-            image.onload = function() {
+            let textX = parseInt(document.getElementById("textX").value);
+            let textY = parseInt(document.getElementById("textY").value);
+            let nameText = document.getElementById("nameInput").value;
+            let positionText = document.getElementById("positionInput").value;
+
+            image.onload = function () {
                 canvas.width = image.width;
                 canvas.height = image.height;
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
-                ctx.drawImage(image, 0, 0, image.width, image.height);
+                ctx.drawImage(image, 0, 0, canvas.width, canvas.height);
                 ctx.font = "30px Cairo, sans-serif";
                 ctx.fillStyle = "#333";
                 ctx.textAlign = "center";
-                let textX = document.getElementById("textX").value;
-                let textY = document.getElementById("textY").value;
-                ctx.fillText(document.getElementById("nameInput").value, textX, textY);
-                ctx.fillText(document.getElementById("positionInput").value, textX, parseInt(textY) + 40);
+                ctx.fillText(nameText, textX, textY);
+                ctx.fillText(positionText, textX, textY + 40);
             };
+
+            if (image.complete) {
+                image.onload();
+            }
         }
 
         function generateCard() {
-            let canvas = document.getElementById("previewCanvas");
-
             if (!selectedDesign) {
                 alert("Please select a design first!");
                 return;
             }
 
             if (canvas.width === 0 || canvas.height === 0) {
-     
+                alert("Please generate the card preview first!");
+                return;
+            }
+
+            let link = document.createElement("a");
+            link.href = canvas.toDataURL("image/png");
+            link.download = "Custom_Card.png";
+
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+    </script>
+</body>
+</html>
